Revert "feat(js): add smooth scrolling and interactive animations (#24)"
This reverts commit 6d1be67adeba7e2e26d14980d07f8e33a75c7bde.

--- a/index.html
+++ b/index.html
@@ -41,24 +41,24 @@
 </nav>
 
 <!-- Hero Section -->
-<section id="home" class="hero" data-title="Home">
-    <div class="hero-content" data-animation="fadeInUp">
-        <h1 class="hero-title typing-effect" data-speed="100">Nelson Masbayi Muyodi</h1>
-        <h2 class="hero-subtitle" data-animation="fadeInUp" data-delay="500">Computer Science Student & Aspiring Developer</h2>
-        <p class="hero-description" data-animation="fadeInUp" data-delay="800">
+<section id="home" class="hero">
+    <div class="hero-content">
+        <h1 class="hero-title">Nelson Masbayi Muyodi</h1>
+        <h2 class="hero-subtitle">Computer Science Student & Aspiring Developer</h2>
+        <p class="hero-description">
             Passionate about creating innovative solutions through code.
             Currently studying Computer Science at Strathmore University,
             building projects that make a difference.
         </p>
-        <div class="hero-buttons" data-animation="fadeInUp" data-delay="1100">
-            <a href="#projects" class="btn hover-lift">View My Work</a>
-            <a href="#contact" class="btn btn-secondary hover-lift">Get In Touch</a>
+        <div class="hero-buttons">
+            <a href="#projects" class="btn">View My Work</a>
+            <a href="#contact" class="btn btn-secondary">Get In Touch</a>
         </div>
     </div>
 </section>
 
 <!-- About Section -->
-<section id="about" class="about section" data-title="About">
+<section id="about" class="about section">
     <div class="container">
         <h2 class="section-title text-center">About Me</h2>
         <p class="section-subtitle text-center">
@@ -92,21 +92,21 @@
                     to innovative projects and make a positive impact through technology.
                 </p>
 
-                <div class="about-stats stagger-children" data-animation="scaleIn">
-                    <div class="stat-item hover-lift">
-                        <span class="stat-number counter" data-target="3" data-suffix="+">0+</span>
+                <div class="about-stats">
+                    <div class="stat-item">
+                        <span class="stat-number">3+</span>
                         <span class="stat-label">Years Coding</span>
                     </div>
-                    <div class="stat-item hover-lift">
-                        <span class="stat-number counter" data-target="10" data-suffix="+">0+</span>
+                    <div class="stat-item">
+                        <span class="stat-number">10+</span>
                         <span class="stat-label">Projects</span>
                     </div>
-                    <div class="stat-item hover-lift">
-                        <span class="stat-number counter" data-target="5" data-suffix="+">0+</span>
+                    <div class="stat-item">
+                        <span class="stat-number">5+</span>
                         <span class="stat-label">Technologies</span>
                     </div>
-                    <div class="stat-item hover-lift">
-                        <span class="stat-number counter" data-target="100" data-suffix="%">0%</span>
+                    <div class="stat-item">
+                        <span class="stat-number">100%</span>
                         <span class="stat-label">Dedication</span>
                     </div>
                 </div>
@@ -124,7 +124,7 @@
 </section>
 
 <!-- Skills Section -->
-<section id="skills" class="skills section" data-title="Skills">
+<section id="skills" class="skills section">
     <div class="container">
         <h2 class="section-title text-center">Skills & Technologies</h2>
         <p class="section-subtitle text-center">
@@ -134,7 +134,7 @@
         <div class="skills-content">
             <div class="skills-categories">
                 <!-- Programming Languages -->
-                <div class="skill-category hover-lift" data-animation="fadeInLeft">
+                <div class="skill-category">
                     <div class="category-icon">
                         <i class="fas fa-code"></i>
                     </div>
@@ -180,7 +180,7 @@
                 </div>
 
                 <!-- Web Technologies -->
-                <div class="skill-category hover-lift" data-animation="fadeInUp" data-delay="200">
+                <div class="skill-category">
                     <div class="category-icon">
                         <i class="fas fa-laptop-code"></i>
                     </div>
@@ -226,7 +226,7 @@
                 </div>
 
                 <!-- Tools & Frameworks -->
-                <div class="skill-category hover-lift" data-animation="fadeInRight" data-delay="400">
+                <div class="skill-category">
                     <div class="category-icon">
                         <i class="fas fa-tools"></i>
                     </div>
@@ -276,7 +276,7 @@
 </section>
 
 <!-- Projects Section -->
-<section id="projects" class="projects section" data-title="Projects">
+<section id="projects" class="projects section">
     <div class="container">
         <h2 class="section-title text-center">My Projects</h2>
         <p class="section-subtitle text-center">
@@ -296,7 +296,7 @@
             <!-- Projects Grid -->
             <div class="projects-grid">
                 <!-- Project 1: Portfolio Website -->
-                <div class="project-card hover-lift" data-category="web" data-animation="scaleIn">
+                <div class="project-card" data-category="web">
                     <div class="project-image">
                         <img src="assets/images/projects/project1.jpg" alt="Portfolio Website">
                         <div class="project-overlay">
@@ -337,7 +337,7 @@
                 </div>
 
                 <!-- Project 2: E-commerce Platform -->
-                <div class="project-card hover-lift" data-category="web" data-animation="scaleIn">
+                <div class="project-card" data-category="web">
                     <div class="project-image">
                         <img src="assets/images/projects/project2.jpg" alt="E-commerce Platform">
                         <div class="project-overlay">
@@ -378,7 +378,7 @@
                 </div>
 
                 <!-- Project 3: Task Management App -->
-                <div class="project-card hover-lift" data-category="mobile" data-animation="scaleIn">
+                <div class="project-card" data-category="mobile">
                     <div class="project-image">
                         <img src="assets/images/projects/project3.jpg" alt="Task Management App">
                         <div class="project-overlay">
@@ -419,7 +419,7 @@
                 </div>
 
                 <!-- Project 4: Student Management System -->
-                <div class="project-card hover-lift" data-category="desktop" data-animation="scaleIn">
+                <div class="project-card" data-category="desktop">
                     <div class="project-image">
                         <img src="assets/images/projects/project4.jpg" alt="Student Management System">
                         <div class="project-overlay">
@@ -460,7 +460,7 @@
                 </div>
 
                 <!-- Project 5: Weather Prediction AI -->
-                <div class="project-card hover-lift" data-category="ai" data-animation="scaleIn">
+                <div class="project-card" data-category="ai">
                     <div class="project-image">
                         <img src="assets/images/projects/project5.jpg" alt="Weather Prediction AI">
                         <div class="project-overlay">
@@ -501,7 +501,7 @@
                 </div>
 
                 <!-- Project 6: Library Management System -->
-                <div class="project-card hover-lift" data-category="web" data-animation="scaleIn">
+                <div class="project-card" data-category="web">
                     <div class="project-image">
                         <img src="assets/images/projects/project6.jpg" alt="Library Management System">
                         <div class="project-overlay">
@@ -554,7 +554,7 @@
 </section>
 
 <!-- Contact Section -->
-<section id="contact" class="contact section" data-title="Contact">
+<section id="contact" class="contact section">
     <div class="container">
         <h2 class="section-title text-center">Get In Touch</h2>
         <p class="section-subtitle text-center">
@@ -777,8 +777,6 @@
 <script src="js/components/projects.js"></script>
 <script src="js/components/contact.js"></script>
 <script src="js/components/mobile-enhancements.js"></script>
-<script src="js/components/animations.js"></script>
-<script src="js/components/smooth-scroll.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
